# cassandra

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
cassandra/: __init__.py  baseline.py  config.py  diagnostician.py  evaluator.py  gate.py  instrumentation.py  llm.py  loop_agent.py  mcp_server.py  models.py  patcher.py  patient_client.py  phoenix_experiments.py  phoenix_mcp.py  redteam.py  replay.py  rootcause.py  selfeval.py  state.py  synthesizer.py  traps.py  watcher.py
dashboard/: main.py
dashboard/ui/: how-it-works.html  index.html
deploy/: agent_engine.py  cloudbuild.yaml  cloudrun.Dockerfile  vm_startup.sh
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DISTRIBUTION.md  IMPLEMENTATION_PLAN.md  PRD.md  REQUIREMENTS.md  WINNING_STRATEGY.md  WORKFLOWS.md
docs/sessions/: 2026-06-10-ci-gate-postmortems-workflows.md  2026-06-10-live-integration-and-feedback-loop-fixes.md  2026-06-11-gemini-migration-and-compliance.md  2026-06-11-generic-patient-decoupling.md
examples/: adapter_template.py
functions/trace_poller/: main.py  requirements.txt
patient/: agent.py  instrumentation.py
scripts/: run_pipeline.py  spike_enumerate_mcp.py
tests/: test_adk_wiring.py  test_baseline.py  test_diagnostician.py  test_features.py  test_mcp_server.py  test_models_and_state.py  test_phoenix_mcp_helpers.py  test_rootcause.py  test_selfeval.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
web/public/img/: ATTRIBUTIONS.md
web/src/: App.tsx  index.css
web/src/components/: Cockpit.tsx  DriveBox.tsx  EventCard.tsx  Hero.tsx  IncidentTape.tsx  Manifesto.tsx  PipelineRibbon.tsx  Reveal.tsx  SelfEval.tsx  TraceCanvas.tsx  views.tsx
(+3 files in other folders)
