[project]
name = "cassandra"
version = "0.1.0"
description = "Cassandra - the meta-agent that watches other agents (Google Cloud Rapid Agent Hackathon, Arize track)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    # Reasoning core + orchestration (mandatory stack)
    "google-genai>=0.3.0",            # Gemini 3 client
    "google-adk>=0.1.0",              # Agent Builder / ADK (LoopAgent, SequentialAgent)
    # Partner MCP (required integration)
    "mcp>=1.2.0",                     # Model Context Protocol client for @arizeai/phoenix-mcp
    # The Patient instrumentation
    "openinference-instrumentation>=0.1.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    # Dashboard
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    # State + infra
    "google-cloud-firestore>=2.19.0",
    "google-cloud-secret-manager>=2.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
# Cassandra's own MCP server — publishes the supervision tools over stdio so any
# agent/IDE (Claude Desktop, Cursor) can call them.
cassandra-mcp = "cassandra.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["patient", "cassandra", "dashboard"]
